--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="btn">#4A8A57</color>
     <color name="grey">#444343</color>
     <color name="Green">#045725</color>
+    <color name="Low_Green">#97C7AA</color>
     <color name="Red">#7A2B25</color>
 </resources>
